필요없는 IOException을 던지는 WebApiExRateProvider.java파일을 수정하고 WebApiExRateProvider.getExRate를 사용하는 코드에 Throw 를 제거, URL을 URI 로 변경하여 메서드 내부에서 IOException을 처리하는 코드로 리팩터링